# vml

./: .clang-format  .gitignore  CMakeLists.txt
.clangd/index/: benchmarks.cpp.BC13023FB4B74D2A.idx  catch.hpp.25EA552A0F405639.idx  catch.hpp.59A5DAEC66C36160.idx  core.cpp.05344D0BA61424FE.idx  core.cpp.8458DD1ADB4C900C.idx  vml.hpp.19552C24C7F4C3E8.idx  vml.hpp.70948D8D3A672754.idx
cmake/: vmlConfig.cmake.in
include/vml/: vml.hpp
tests/: benchmarks.cpp  core.cpp
